output/unpackaged/unpackaged/objects/Deal_Approval_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Model__c</fullName>
        <label>Approval Model</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_On__c</fullName>
        <label>Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Plan_Key__c</fullName>
        <externalId>true</externalId>
        <label>Current Plan Key</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Version__c</fullName>
        <label>Deal Version</label>
        <precision>12</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal_Registration__c</referenceTo>
        <relationshipLabel>Approval Plans</relationshipLabel>
        <relationshipName>Approval_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generated_On__c</fullName>
        <label>Generated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deal Approval Plan</label>
    <nameField>
        <displayFormat>DAP-{000000}</displayFormat>
        <label>Deal Approval Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Approval Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>